--- a/personal/templates/personal/home.html
+++ b/personal/templates/personal/home.html
@@ -46,6 +46,14 @@
 	margin-top: 10px;
 	justify-content: start;
 }
+.timestamp-span{
+	font-weight: 400;
+	font-size: 0.8em;
+	color: var(--secondary-text-color);
+}
+.timestamp-span:hover{
+	cursor: pointer;
+}
 </style>
 
 <div class="container">
@@ -88,7 +96,18 @@
 		public_chat_socket.onmessage = function(message) {
 			console.log("Got chat websocket message " + message.data);
 			var data = JSON.parse(message.data);
-			appendChatMessage(data)
+
+			// Handle errors (ClientError)
+			if (data.error) {
+				console.error(data.error + ": " + data.message)
+				showClientErrorModal(data.message)
+				return;
+			}
+
+			// Handle getting a message
+			if (data.msg_type == 0) {
+				appendChatMessage(data)
+			}
 		};
 
 		public_chat_socket.addEventListener("open", function(e){
@@ -139,13 +158,14 @@
 		uName = data['username']
 		user_id = data['user_id']
 		profile_image = data['profile_image']
+		timestamp = data['natural_timestamp']
 
 		var msg = message + '\n';
 		var username = uName + ": "
-		createChatMessageElement(msg, username, profile_image, user_id)
+		createChatMessageElement(msg, username, profile_image, user_id, timestamp)
 	}
 
-	function createChatMessageElement(msg, username, profile_image, user_id){
+	function createChatMessageElement(msg, username, profile_image, user_id, timestamp){
 		var chatLog = document.getElementById("id_chat_log")
 
 		var newMessageDiv = document.createElement("div")
@@ -179,6 +199,16 @@
 		usernameSpan.innerHTML = username
 		div2.appendChild(usernameSpan)
 
+		var timestampSpan = document.createElement("span")
+		timestampSpan.innerHTML = timestamp
+		timestampSpan.classList.add("timestamp-span")
+		timestampSpan.classList.add("d-flex")
+		timestampSpan.classList.add("align-items-center")
+		timestampSpan.addEventListener("click", function(e){
+			selectUser(user_id)
+		})
+		div2.appendChild(timestampSpan)
+
 		div1.appendChild(div2)
 
 		var msgP = document.createElement("p")
@@ -197,7 +227,34 @@
 		var win = window.open(url, "_blank")
 		win.focus()
 	}
+
+	function showClientErrorModal(message){
+		document.getElementById("id_client_error_modal_body").innerHTML = message
+		document.getElementById("id_trigger_client_error_modal").click()
+	}
 </script>
 
+<!-- Client Error MODAL -->
+<button type="button" id="id_trigger_client_error_modal" class="d-none btn btn-primary" data-toggle="modal" data-target="#id_client_error_modal">
+</button>
+<div class="modal fade" id="id_client_error_modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Socket Client Error</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p id="id_client_error_modal_body">Something went wrong.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" id="id_client_error_modal_close_btn">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Client Error MODAL -->
 
 {% endblock content %}
