--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -1,5 +1,15 @@
 {% load static %}
 
+<style type="text/css">
+	.chat-dropdown-header:hover{
+		cursor: pointer;
+		background: var(--main-background-color);
+	}
+	.chat-dropdown-header{
+		color: var(--light-primary-text-color);
+	}
+</style>
+
 <!-- Header -->
 <div class="d-flex flex-column flex-lg-row p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
 
@@ -73,7 +83,7 @@
 							<img class="account-image rounded-circle m-auto d-block dropdown-toggle" id="id_profile_links" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="{{request.user.profile_image.url}}" alt="logo" width="40" height="40">
 							<div class="dropdown-menu" aria-labelledby="id_profile_links">
 								<a class="dropdown-item" href="{% url 'account:view' user_id=request.user.id %}">Account</a>
-								<a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+								<!--<a class="dropdown-item" href="{% url 'logout' %}">Logout</a>-->
 							</div>
 						</div>
 					</div>
@@ -89,6 +99,7 @@
 </div>
 
 <script type="text/javascript">
+	setupChatDropdownHeader()
 	function executeQuery() {
 		var query = ""
 		query = document.getElementById('id_q_small').value;
@@ -98,6 +109,36 @@
 	    window.location.replace("{% url 'search' %}?q=" + query)
 	    return false
 	}
+	function setupChatDropdownHeader(){
+		var notificationContainer = document.getElementById("id_chat_notifications_container")
+
+		if(notificationContainer != null){
+
+			var div = document.createElement("div")
+			div.classList.add("chat-dropdown-header", "d-flex", "flex-row", "justify-content-end", "m-auto", "align-items-end")
+			div.addEventListener("click", function(e){
+				var url = "{% url 'chat:private-chat-room' %}"
+				chatRedirect(url)
+			})
+
+			span1 = document.createElement("span")
+			span1.classList.add("mr-2")
+			span1.innerHTML = "Go to chat"
+			div.appendChild(span1)
+
+			span2 = document.createElement("span")
+			span2.classList.add("material-icons", "mr-2")
+			span2.innerHTML = "open_with"
+			div.appendChild(span2)
+			notificationContainer.appendChild(div)
+		}
+	}
+
+	function chatRedirect(url){
+		window.location.href = url
+	}
+
+
 </script>
 
 
