--- a/static/bootstrap/css/style.css
+++ b/static/bootstrap/css/style.css
@@ -8240,7 +8240,7 @@ h1, h2, h3, h4, h5,
     #sidebar ul li a {
       padding: 10px 0;
       display: block;
-      color: rgba(255, 255, 255, 0.8);
+      color: #000000;
       border-bottom: 1px solid rgba(255, 255, 255, 0.1); }
       #sidebar ul li a:hover {
         color: #f8b739; }
