--- a/templates/snippets/header-backup.html
+++ b/templates/snippets/header-backup.html
@@ -15,7 +15,7 @@
     </style>
 
 	<div class="wrapper d-flex align-items-stretch">
-		<nav id="sidebar" style="background-color: #1a2957;font-weight: 600;">
+		<nav id="sidebar" class="bg-light" style="font-weight: 600;color: #fff;">
 			<div class="p-4 pt-5 mb-5">
 	  		
             <img class="account-image rounded-circle m-auto d-block" id="id_profile_links" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="{{request.user.profile_image.url}}" alt="logo" width="140" height="140">       
