--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,9 @@
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
+
+	<!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 	
 	<!-- Cropperjs -->
 	<link rel="stylesheet" href="{% static 'cropperjs/dist/cropper.min.css' %}">
