--- a/post/templates/post/post_delete.html
+++ b/post/templates/post/post_delete.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row mt-5">
         <div class="col-md-3 col-sm-6">
-            <a href="{% url 'post:post-detail' object.pk %}" class="btn btn-light">Back to Feed</a>
+            <a href="{% url 'post:post-detail' object.pk %}" class="btn btn-light">Back to Post</a>
         </div>
     </div>
     <div class="row justify-content-center mt-5">
