--- a/account/templates/account/account_backup.html
+++ b/account/templates/account/account_backup.html
@@ -398,6 +398,23 @@ body{
                 <p>{{ post.body }}</p>
                 <a href="{% url 'post:post-detail' post.pk %}" class="stretched-link"></a>
             </div>
+            <div class="d-flex flex-row">
+              <form method="POST" action="{% url 'post:post-like' post.pk %}">
+                  {% csrf_token %}
+                  <input type="hidden" name="next" value="{{ request.path }}">
+                  <button style="background-color: transparent; border: none; box-shadow: none;" type="submit">
+                      <i class="far fa-thumbs-up"> <span>{{ post.likes.all.count }}</span></i>
+                  </button>
+              </form>
+
+              <form method="POST" action="{% url 'post:post-dislike' post.pk %}">
+                  {% csrf_token %}
+                  <input type="hidden" name="next" value="{{ request.path }}">
+                  <button style="background-color: transparent; border: none; box-shadow: none;" type="submit">
+                      <i class="far fa-thumbs-down"> <span>{{ post.dislikes.all.count }}</span></i>
+                  </button>
+              </form>
+          </div>
         </div>
       </div>
       {% endfor %}
