--- a/post/templates/post/post_detail.html
+++ b/post/templates/post/post_detail.html
@@ -10,14 +10,36 @@
     </div>
     <div class="row justify-content-center mt-3">
         <div class="col-md-5 col-sm-12 border-bottom">
-            <p>
-                <strong>{{ post.author }}</strong> {{ post.created_on }}
+            <div>
+                <a href="{% url 'account:view' user_id=post.author.profile.pk %}">
+                    <img class="round-circle " style="float: left;margin-right: 1rem;" height="30" width="30" src="{{ post.author.profile_image.url }}" />
+                </a>
+                <p style="padding-top: 0.5rem;">
+                    <a class="text-primary" style="text-decoration: none;" href="{% url 'account:view' user_id=post.author.profile.pk %}">@{{ post.author }}</a> {{ post.created_on }}
+                </p>
+            </div>
                 {% if request.user == post.author %}
                 <a href="{% url 'post:post-edit' post.pk %}" style="color: #333;"><i class="far fa-edit"></i></a>
                 <a href="{% url 'post:post-delete' post.pk %}" style="color: #333;"><i class="fas fa-trash"></i></a>
                 {% endif %}
-            </p>
             <p>{{ post.body }}</p>
+            <div class="d-flex flex-row">
+                <form method="POST" action="{% url 'post:post-like' post.pk %}">
+                    {% csrf_token %}
+                    <input type="hidden" name="next" value="{{ request.path }}">
+                    <button style="background-color: transparent; border: none; box-shadow: none;" type="submit">
+                        <i class="far fa-thumbs-up"> <span>{{ post.likes.all.count }}</span></i>
+                    </button>
+                </form>
+
+                <form method="POST" action="{% url 'post:post-dislike' post.pk %}">
+                    {% csrf_token %}
+                    <input type="hidden" name="next" value="{{ request.path }}">
+                    <button style="background-color: transparent; border: none; box-shadow: none;" type="submit">
+                        <i class="far fa-thumbs-down"> <span>{{ post.dislikes.all.count }}</span></i>
+                    </button>
+                </form>
+            </div>
         </div>
     </div>
 
@@ -41,7 +63,14 @@
     <div class="row justify-content-center mt-3 mb-5 border-bottom">
         <div class="col-md-5 col-sm-12">
             <p>
-                <strong>{{ comment.author }}</strong> {{ comment.created_on }}
+                <div>
+                    <a href="{% url 'account:view' user_id=comment.author.profile.pk %}">
+                        <img class="round-circle " style="float: left;margin-right: 1rem;" height="30" width="30" src="{{ comment.author.profile_image.url }}" />
+                    </a>
+                    <p style="padding-top: 0.5rem;">
+                        <a class="text-primary" style="text-decoration: none;" href="{% url 'account:view' user_id=comment.author.profile.pk %}">@{{ comment.author }}</a> {{ comment.created_on }}
+                    </p>
+                </div>
                 {% if request.user == comment.author %}
                 <a href="{% url 'post:comment-delete' post.pk comment.pk %}" style="color: #333;"><i class="fas fa-trash"></i></a>
                 {% endif %}
