--- a/post/templates/post/post_list.html
+++ b/post/templates/post/post_list.html
@@ -24,11 +24,36 @@
         <!--
         <p><strong>{{ post.author }}</strong> {{ post.created_on }}</p>
         <p>{{ post.body }}</p>
-        <a class="stretched-link" href="{% url 'post:post-detail' post.pk %}"></a>-->
-        <p><a style="text-decoration: none" class="text-primary" href="{% url 'account:view' user_id=post.author.profile.pk %}">@{{ post.author }}</a> {{ post.created_on }}</p>
+        <a class="stretched-link" href="{% url 'post:post-detail' post.pk %}"></a>
+        <p><a style="text-decoration: none" class="text-primary" href="{% url 'account:view' user_id=post.author.profile.pk %}">@{{ post.author }}</a> {{ post.created_on }}</p>-->
+        <div>
+            <a href="{% url 'account:view' user_id=post.author.profile.pk %}">
+                <img class="round-circle " style="float: left;margin-right: 1rem;" height="30" width="30" src="{{ post.author.profile_image.url }}" />
+            </a>
+            <p style="padding-top: 0.5rem;">
+                <a class="text-primary" style="text-decoration: none;" href="{% url 'account:view' user_id=post.author.profile.pk %}">@{{ post.author }}</a> {{ post.created_on }}
+            </p>
+        </div>
         <div class="position-relative">
             <p>{{ post.body }}</p>
             <a href="{% url 'post:post-detail' post.pk %}" class="stretched-link"></a>
+        </div>
+        <div class="d-flex flex-row">
+            <form method="POST" action="{% url 'post:post-like' post.pk %}">
+                {% csrf_token %}
+                <input type="hidden" name="next" value="{{ request.path }}">
+                <button style="background-color: transparent; border: none; box-shadow: none;" type="submit">
+                    <i class="far fa-thumbs-up"> <span>{{ post.likes.all.count }}</span></i>
+                </button>
+            </form>
+
+            <form method="POST" action="{% url 'post:post-dislike' post.pk %}">
+                {% csrf_token %}
+                <input type="hidden" name="next" value="{{ request.path }}">
+                <button style="background-color: transparent; border: none; box-shadow: none;" type="submit">
+                    <i class="far fa-thumbs-down"> <span>{{ post.dislikes.all.count }}</span></i>
+                </button>
+            </form>
         </div>
     </div>
 </div>
