--- a/friend/templates/friend/friend_list_backup.html
+++ b/friend/templates/friend/friend_list_backup.html
@@ -124,6 +124,9 @@ body {
 </style>
 
 <div class="container">
+    <div class="d-flex flex-row flex-grow-1 justify-content-center align-items-center p-4">
+        <h3>@{{this_user}} friends : {{friends|length}}</h3>
+    </div>
     <div class="row">
       {% if friends %}
       {% for account in friends %}
@@ -134,13 +137,13 @@ body {
             <img src="{{account.0.profile_image.url}}" width="300" height="300" class="img img-responsive-special">
             <div class="profile-content">
                 <div class="profile-name text-warning">
-                    {{account.0.username}}
-                    <p>{{account.0.email}}</p>
+                    {{account.2.fullname}}
+                    <p>@{{account.0.username}}</p>
                 </div>
                 <div class="profile-description">{{account.2.bio}}
                     <div class="card-center px-2">
                         {% if account.1 %}
-                        <p class="card-text"><a href="#" onclick="createOrReturnPrivateChat('{{account.0.id}}')">Send a Message</a></p>
+                        <p class="card-text text-info"><a href="#" onclick="createOrReturnPrivateChat('{{account.0.id}}')">Send a Message</a></p>
                         {% endif %}
                     </div>
                 </div>
@@ -154,13 +157,13 @@ body {
                     <div class="col-xl-4">
                         <div class="profile-overview">
                             <p>Followers</p>
-                            <h4>0</h4>
+                            <h4>{{account.4|length}}</h4>
                         </div>
                     </div>
                     <div class="col-xl-4">
                         <div class="profile-overview">
                             <p>Following</p>
-                            <h4>0</h4>
+                            <h4>{{account.5|length}}</h4>
                         </div>
                     </div>
                 </div>
