--- a/account/templates/account/account_backup.html
+++ b/account/templates/account/account_backup.html
@@ -56,6 +56,12 @@ body{
 .shadow-none {
     box-shadow: none!important;
 }
+.post-image {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
 </style>
 
 <div class="container">
@@ -399,6 +405,15 @@ body{
         <div class="col-md-8 col-sm-12 border-bottom">
             <p><a style="text-decoration: none" class="text-primary" href="{% url 'account:view' user_id=post.author.profile.pk %}">@{{ post.author }}</a> {{ post.created_on }}</p>
             <div class="position-relative">
+                {% if post.image.count > 0 %}
+                  <div class="row">
+                    {% for img in post.image.all %}
+                        <div class="col-md-4 col-xs-12">
+                            <img src="{{ img.image.url }}" class="post-image" />
+                        </div>
+                    {% endfor %}
+                  </div>
+                {% endif %}
                 <p>{{ post.body }}</p>
                 <a href="{% url 'post:post-detail' post.pk %}" class="stretched-link"></a>
             </div>
