--- a/account/templates/account/account_backup.html
+++ b/account/templates/account/account_backup.html
@@ -62,6 +62,9 @@ body{
     border-radius: 10px;
     margin-bottom: 10px;
 }
+.body-post a {
+  text-decoration: none;
+}
 </style>
 
 <div class="container">
@@ -414,7 +417,9 @@ body{
                     {% endfor %}
                   </div>
                 {% endif %}
-                <p>{{ post.body }}</p>
+                <div class='body-post'>
+                  <p>{{ post.body }}</p>
+                </div>
                 <a href="{% url 'post:post-detail' post.pk %}" class="stretched-link"></a>
             </div>
             <div class="d-flex flex-row">
