--- a/templates/layout-blank.html
+++ b/templates/layout-blank.html
@@ -558,6 +558,30 @@
 
     </script>
 
+    <script type="text/javascript">
+        function formatTags() {
+            const elements = document.getElementsByClassName('body-post');
+            //const elements = document.querySelectorAll('.body-post');
+            for (let i = 0; i < elements.length; i++) {
+                let bodyText = elements[i].children[0].innerText;
+                console.log(bodyText);
+                let words = bodyText.split(' ');
+
+                for (let j = 0; j < words.length; j++) {
+                    if (words[j][0] === '#') {
+                        //let replacedText = bodyText.replace(/\s\#(.*?)(\s|$)/g, ` <a href="#">${words[j]}</a>`);
+                        let replacedText = bodyText.replace(/\s\#(.*?)(\s|$)/g, ` <a href="/explore?query=${words[j].substring(1)}">${words[j]}</a>`);
+                        elements[i].innerHTML = replacedText;
+
+                        //console.log(replacedText);
+                    }
+                }
+            }
+        }
+
+        formatTags();
+    </script>
+
 
 </body>
 
