--- a/account/templates/account/account_backup.html
+++ b/account/templates/account/account_backup.html
@@ -372,6 +372,7 @@ body{
                 </div>
               </div>
             </div>
+            <!--
             <div class="col-sm-6 mb-3">
               <div class="card h-100">
                 <div class="card-body">
@@ -398,7 +399,7 @@ body{
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
