--- a/templates/layout-blank.html
+++ b/templates/layout-blank.html
@@ -317,11 +317,11 @@
                                         <li>
                                             <a href="{% url 'account:view' user_id=request.user.id %}" ><i class="icon-user"></i> <span>Profile</span></a>
                                         </li>
-                                        <li>
+                                        <!--<li>
                                             <a href="email-inbox.html"><i class="icon-envelope-open"></i> <span>Inbox</span> <div class="badge gradient-3 badge-pill badge-primary">3</div></a>
                                         </li>
                                         
-                                        <hr class="my-2">
+                                        <hr class="my-2">-->
                                         <li>
                                             <!-- BIG WARNING, EDIT IN PRODUCTION -->
                                             <a href="http://127.0.0.1:8000/lock/?next={{request.path}}"><i class="icon-lock"></i> <span>Lock Screen</span></a>
