lock screen fix

--- a/account/templates/account/edit_account_backup.html
+++ b/account/templates/account/edit_account_backup.html
@@ -74,13 +74,14 @@
 						  		<h6 class="mt-4 field-heading">Username</h6>
 						  		<input type="text" name="username" id="id_input_username" class="form-control" placeholder="Username" required
 								value="{{form.initial.username}}">
+								<!--
 								<div class="mt-4 checkbox">
 									<label>
 										<input type="checkbox" name="hide_email" id="id_input_hide_email" {% if form.initial.hide_email %}checked{%endif%}>
 										Hide Email
 									</label>
 						  			
-								</div>
+								</div> -->
 
 								{% for field in form %}
 								<p>
