--- a/templates/layout-blank.html
+++ b/templates/layout-blank.html
@@ -325,7 +325,7 @@
                                         <hr class="my-2">-->
                                         <li>
                                             <!-- BIG WARNING, EDIT IN PRODUCTION -->
-                                            <a href="http://127.0.0.1:8000/lock/?next={{request.path}}"><i class="icon-lock"></i> <span>Lock Screen</span></a>
+                                            <a href="https://pnptalk.herokuapp.com/lock/?next={{request.path}}"><i class="icon-lock"></i> <span>Lock Screen</span></a>
                                         </li>
                                         <li><a href="{% url 'logout' %}"><i class="icon-key"></i> <span>Logout</span></a></li>
                                     </ul>
