--- a/templates/layout-blank.html
+++ b/templates/layout-blank.html
@@ -362,7 +362,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="{#% url 'home' %#}" aria-expanded="false">
+                        <a href="{% url 'forum:forum-topic' %}" aria-expanded="false">
                             <i class="fas fa-layer-group"></i><span class="nav-text">Forum</span>
                         </a>
                     </li>
